--- a/index.html
+++ b/index.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog page</title>
-    <meta name="description" content="Creating an html blog page">
-    <meta name="author" content="a. taha and Godslove">
-</head>
-<body>
-    
-<!-- kindly input all your code below this comment 
+    <meta name="description" content="Creating an html blog page" />
+    <meta name="author" content="a. taha and Godslove" />
+  </head>
+  <body>
+    <!-- kindly input all your code below this comment 
     create a branch under the pair_programming branch and not the main branch.
 -->
-
-</body>
+    <center>
+      <h3>Contact Us!</h3>
+      <form
+        action="mailto:contact@yourdomain.com"
+        method="POST"
+        enctype="multipart/form-data"
+        name="EmailForm"
+      >
+        <label for="sender_name">Name:</label>
+        <input type="text" size="19" name="sender_name" /> <br /><br />
+        <label for="sender_email">Email:</label>
+        <input type="email" name="sender_email" /> <br />
+        <br />
+        <label for="message">Please input your message here:</label>
+        <textarea name="message"> </textarea><br />
+        <button type="submit" value="Submit">Send</button>
+      </form>
+    </center>
+  </body>
 </html>
