Blog page attributes

--- a/index.html
+++ b/index.html
@@ -8,11 +8,25 @@
     <meta name="description" content="Creating an html blog page">
     <meta name="author" content="a. taha and Godslove">
 </head>
-<body>
+
+  <body style="background-image: url('assets/laptop.png');" >
+    <article>
+      <h1>What Programmers do</h1>
+      <p>In general, the programmer's job is to convert problem solutions into 
+        instructions for the computer. That is, the programmer prepares the 
+        instructions of a computer program and runs those instructions on the 
+        computer, tests the program to see if it is working properly, and makes 
+        corrections to the program. The programmer also writes a report on the 
+        program. These activities are all done for the purpose of helping a user 
+        fill a need, such as paying employees, billing customers, or admitting 
+        students to college.
+      </p>
+    </article>
     
-<!-- kindly input all your code below this comment 
-    create a branch under the pair_programming branch and not the main branch.
--->
+    <footer>
+      <p>Owners: a. taha and Godslove</p>
+      <p>Contact: develhope.co</p>
+    </footer>
 
 </body>
 </html>
